test/implicitDup21_6.slq
def foo(x:ğ”¹){
	y:=dup(x);
	z:=y;
	if X(z){ /// error
		r:=X(x);
	}else{
		r:=x;
	}
	return r;
}
